--- a/infra/nginx.conf
+++ b/infra/nginx.conf
@@ -1,7 +1,8 @@
 server {
     listen 80;
     server_tokens off;
-    server_name 158.160.104.16;
+    server_name 127.0.0.1, localhost,
+    158.160.104.16;
 
     location /media/ {
         root /var/html;
