--- a/infra/docker-compose.yml
+++ b/infra/docker-compose.yml
@@ -10,9 +10,7 @@ services:
       - ./.env
 
   backend:
-    build:
-      context: ../backend
-      dockerfile: Dockerfile
+    image: sammytmg/backend:latest
     volumes:
       - static_value:/app/static/
       - media_value:/app/media/
@@ -20,11 +18,10 @@ services:
       - db
     env_file:
       - ./.env
+    restart: always
 
   frontend:
-    build:
-      context: ../frontend
-      dockerfile: Dockerfile
+    image: sammytmg/frontend:latest
     volumes:
       - ../frontend/:/app/result_build/
     depends_on:
